--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -7,9 +7,9 @@ web:
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    username: mcsq
-    password: mcsq
-    url: jdbc:mysql://localhost:3306/mcsq?useUnicode=true&characterEncoding=utf8&autoReconnect=true&serverTimezone=GMT%2B8
+    username: root
+    password: root
+    url: jdbc:mysql://127.0.0.1:3306/mcsq?useUnicode=true&characterEncoding=utf8&autoReconnect=true&serverTimezone=GMT%2B8
     type: com.zaxxer.hikari.HikariDataSource
 
 logging:
